# apps/files/openapi.json
@@ -39,6 +39,7 @@
                             "forbidden_filename_extensions",
                             "chunked_upload",
                             "file_conversions",
+                            "resumable_upload",
                             "directEditing"
                         ],
                         "properties": {
@@ -122,6 +123,21 @@
                                         "displayName": {
                                             "type": "string"
                                         }
+                                    }
+                                }
+                            },
+                            "resumable_upload": {
+                                "type": "object",
+                                "required": [
+                                    "supported",
+                                    "interop_version"
+                                ],
+                                "properties": {
+                                    "supported": {
+                                        "type": "boolean"
+                                    },
+                                    "interop_version": {
+                                        "type": "string"
                                     }
                                 }
                             },
@@ -2888,5 +2904,10 @@
             }
         }
     },
-    "tags": []
+    "tags": [
+        {
+            "name": "resumable_upload",
+            "description": "Implementation of https://datatracker.ietf.org/doc/html/draft-ietf-httpbis-resumable-upload-05 All functionality described by the draft RFC is excluded from OpenAPI."
+        }
+    ]
 }
